<resources>
    <string name="app_name">Calculadora</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="resultado">=</string>
    <string name="btnC">C</string>
    <string name="btnDividir" >/</string>
    <string name="btnMultiplicar" >X</string>
    <string name="btnSuma" >+</string>
    <string name="btnResta" >-</string>
    <string name="btnBorrar" >Borrar</string>
    <string name="btnPorcentaje" >%</string>
    <string name="btnComa" >,</string>
    <string name="btnCero" >0</string>
    <string name="btnUno" >1</string>
    <string name="btnDos" >2</string>
    <string name="btnTres" >3</string>
    <string name="btnCuatro" >4</string>
    <string name="btnCinco" >5</string>
    <string name="btnSix" >6</string>
    <string name="btnSiete" >7</string>
    <string name="btnOcho">8</string>
    <string name="btnNueve" >9</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>
